--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="clock">
-        <div class="num">10:25:35</div>
+        <div class="num"></div>
     </div>
 
     <script src="script.js" type="text/javascript"></script>
